--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1",
     "webpack-merge": "^4.2.1"
+  },
+  "dependencies": {
+    "three": "^0.102.1"
   }
 }
