--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,3 @@
 {
-  "presets": [
-    [
-      "@babel/preset-env",
-      {
-        "targets": {
-          "browsers": [">0.25%", "IE > 9", "not op_mini all"]
-        },
-        "useBuiltIns": "usage"
-      }
-    ]
-  ]
+  "presets": [["@babel/preset-env"]]
 }
